--- a/frontend-react/src/styles/App.scss
+++ b/frontend-react/src/styles/App.scss
@@ -20,6 +20,11 @@ body {
   padding: 2rem;
 }
 
+.title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
 .bookList {
   list-style: none;
   padding: 0;
